infera/k8s/comment-deplo.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: comment-depo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      continers:
        - name: posts
          image: dawit687/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comment-cluster-service
spec:
  selector:
    app: comments
  ports:
    - name: comment-cluster-service
      port: 3001
      targetPort: 3001
      protocol: TCP
