infera/k8s/posts-deplo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: dawit687/posts
---
apiVersion: v1
kind: Service
metadata:
  name: post-cluster-service
spec:
  selector:
    app: posts
  ports:
    - name: post-cluster-service
      port: 4000
      targetPort: 4000
      protocol: TCP
