infera/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  # annotations:
  #   kubernates.io/ingress.class: nginx   older version v1beta1
spec:
  ingressClassName: nginx
  rules:
    - host: posts.com # we  teak  for dev as 127.0.0.1 in etc/host
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 3000
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comment-cluster-service
                port:
                  number: 3001
